fix login button text align center

--- a/client/templates/navbar/navbar.css
+++ b/client/templates/navbar/navbar.css
@@ -143,7 +143,7 @@
 }
 
 /* Small Devices, Tablets */
-@media only screen and (max-width : 768px) {
+@media only screen and (max-width : 767px) {
   #login-buttons {
     text-align: center;
   }
